Improve IntelliJ settings readability
Clarify settings hierarchy, normalize control sizing, and keep guidance helpers attached to their fields.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>